--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -621,7 +621,7 @@
       "introTitle": "Acceptez les paiements en {{bitcoin}}",
       "easily": "Facile",
       "worldwide": "Mondial",
-      "nonCustodial": "Non-custodial",
+      "nonCustodial": "Non-dépositaire",
       "noKyc": "Sans identification",
       "in1minute": "En 1 minute",
       "licensedBy": "Agréé par la",
