--- a/src/assets/translations/fi.json
+++ b/src/assets/translations/fi.json
@@ -625,7 +625,7 @@
       "noKyc": "Ilman tunnistautumista",
       "in1minute": "Minuutissa",
       "licensedBy": "toimiluvan myöntäjä",
-      "finma": "Swiss Financial Market Supervisory Authority",
+      "finma": "Sveitsin rahoitusmarkkinoiden valvontaviranomainen",
       "createAccount": "Luo tili ja Bitcoin-omasäilö",
       "orConnectBy": "tai kirjaudu käyttäen",
       "scanActivationQRcode": "QR-maksupäätekoodia",
