--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -590,7 +590,7 @@
       "pending": "Pending",
       "transactions": "Transactions",
       "send": "Send",
-      "receive": "Receive",
+      "sell": "Sell",
       "receiveBitcoins": "Receive bitcoins",
       "sent": "Sent",
       "received": "Received",
