--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -519,6 +519,7 @@
       "percentInBtcAndFiat": "{{btcPercent}}% in bitcoin | {{fiatPercent}}% in {{currency}}",
       "wallet": "Wallet",
       "accessWallet": "Access wallet",
+      "dashboard": "Dashboard",
       "contactSupport": "Contact support",
       "logout": "Logout",
       "confirmLogout": "Confirm logout",
