--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -527,7 +527,8 @@
       "shareMyLink": "Partager mon lien d'activation",
       "copyMyLink": "Copier mon lien d'activation",
       "acceptBitcoinPayments": "Accepter les paiements en bitcoins",
-      "invitationText": "Utilisez mon lien pour accepter les paiements en bitcoins pour {{merchantName}}:"
+      "invitationText": "Utilisez mon lien pour accepter les paiements en bitcoins pour {{merchantName}}:",
+      "dashboard": "Tableau de bord"
     },
     "signatureLogin": {
       "titleWallet": "Signature avec portefeuille matériel",
@@ -597,6 +598,7 @@
       "btcAmount": "Montant",
       "fees": "Frais",
       "errorFetchingWallet": "Erreur lors de la récupération de votre portefeuille",
+      "sell": "Vendre",
       "sendModal": {
         "send": "Envoyer vos bitcoins",
         "fastestFee": "Rapide",
