--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -527,7 +527,8 @@
       "shareMyLink": "Condividi il mio link di attivazione",
       "copyMyLink": "Copia il mio link di attivazione",
       "acceptBitcoinPayments": "Accettare pagamenti in Bitcoin",
-      "invitationText": "Utilizza il mio link per accettare pagamenti in Bitcoin per {{merchantName}}:"
+      "invitationText": "Utilizza il mio link per accettare pagamenti in Bitcoin per {{merchantName}}:",
+      "dashboard": "Cruscotto"
     },
     "signatureLogin": {
       "titleWallet": "Firma con portafoglio hardware",
@@ -597,6 +598,7 @@
       "btcAmount": "Importo",
       "fees": "Commissione",
       "errorFetchingWallet": "Errore durante il recupero del portafoglio",
+      "sell": "Vendere",
       "sendModal": {
         "send": "Invia i tuoi bitcoin",
         "fastestFee": "Il più veloce",
