Fixed Finma naming

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -592,7 +592,6 @@
       "pending": "Pending",
       "transactions": "Transactions",
       "send": "Send",
-      "sell": "Sell",
       "receiveBitcoins": "Receive bitcoins",
       "sent": "Sent",
       "received": "Received",
@@ -627,7 +626,7 @@
       "nonCustodial": "Non-custodial",
       "noKyc": "No KYC",
       "in1minute": "In 1 minute",
-      "licensedBy": "Licensed by",
+      "supervisedBy": "Supervised by",
       "finma": "Swiss Financial Market Supervisory Authority",
       "createAccount": "Create account",
       "orConnectBy": "or connect by",
