--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -625,13 +625,13 @@
       "nonCustodial": "Non-custodial",
       "noKyc": "No KYC",
       "in1minute": "In 1 minute",
-      "licensedBy": "Licensed by",
       "finma": "Swiss Financial Market Supervisory Authority",
       "createAccount": "Create account",
       "orConnectBy": "or connect by",
       "scanActivationQRcode": "Scan activation QR code",
       "email": "Email",
-      "signature": "Signature"
+      "signature": "Signature",
+      "supervisedBy": "Supervised by"
     }
   },
   "secureWallet": {
