--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -630,7 +630,8 @@
       "orConnectBy": "oppure collegati con",
       "scanActivationQRcode": "Scansiona il QR code d'accesso",
       "email": "Email",
-      "signature": "Firma"
+      "signature": "Firma",
+      "supervisedBy": "Supervisionato da"
     }
   },
   "secureWallet": {
