--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -630,7 +630,8 @@
       "orConnectBy": "ou ligue-se através de",
       "scanActivationQRcode": "Digitalizar o código QR de ativação",
       "email": "E-mail",
-      "signature": "Assinatura"
+      "signature": "Assinatura",
+      "supervisedBy": "Supervisionado por"
     }
   },
   "secureWallet": {
