--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -631,7 +631,7 @@
       "scanActivationQRcode": "Scanner le code QR d'activation",
       "email": "E-mail",
       "signature": "Signature",
-      "supervisedBy": "Supervisé par"
+      "supervisedBy": "Supervisé par la"
     }
   },
   "secureWallet": {
