--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -408,10 +408,10 @@
       "title": "Payout configuration",
       "iWantToReceive": "I want to receive my funds...",
       "in": "in",
-      "fees": "From {{percent}}% fees",
+      "fees": "{{percent}}% fees",
       "feesDetails1": "Fees",
-      "feesFirstYear": "1st year of registration",
-      "feesAfterwards": "After the 1st year",
+      "firstThreeMonths": "3 first months",
+      "feesAfterwards": "After the 3 first months",
       "cryptoSignature": "Required signature",
       "instantTransfer": "Instant transfer",
       "dailyTransfer": "Daily transfer",
@@ -558,7 +558,8 @@
       "yourCurrency": "Your currency",
       "currency": "Currency",
       "currencyDescription": "The default currency of your Business",
-      "referralCode": "Referral code",
+      "referralCode": "Referral/promo code",
+      "feesDiscount": "First 3 months at 0% fees !",
       "referralCodeDescription": "If someone brought you to Swiss Bitcoin Pay, please write their referral code here",
       "submitDescription1": "By creating your account, you're accepting our",
       "submitDescription2": "and",
