--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -408,7 +408,9 @@
       "title": "Payout configuration",
       "iWantToReceive": "I want to receive my funds...",
       "in": "in",
+      "fees": "{{percent}}% fees",
       "feesDetails1": "Fees",
+      "feesAfterwards": "After the 3 first months",
       "cryptoSignature": "Required signature",
       "instantTransfer": "Instant transfer",
       "dailyTransfer": "Daily transfer",
@@ -556,6 +558,7 @@
       "yourCurrency": "Your currency",
       "currency": "Currency",
       "currencyDescription": "The default currency of your Business",
+      "referralCode": "Referral/promo code",
       "referralCodeDescription": "If someone brought you to Swiss Bitcoin Pay, please write their referral code here",
       "submitDescription1": "By creating your account, you're accepting our",
       "submitDescription2": "and",
