--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -408,7 +408,9 @@
       "title": "Configuration des paiements",
       "iWantToReceive": "Je veux recevoir mes fonds...",
       "in": "en",
+      "fees": "Dès {{percent}}% de frais",
       "feesDetails1": "Frais",
+      "feesAfterwards": "Après la 1ère année",
       "cryptoSignature": "Signature obligatoire",
       "instantTransfer": "Transfert instantané",
       "dailyTransfer": "Transfert quotidien",
@@ -555,6 +557,7 @@
       "yourCurrency": "Votre devise",
       "currency": "Devise",
       "currencyDescription": "La devise par défaut de votre entreprise",
+      "referralCode": "Code de parrainage",
       "referralCodeDescription": "Si quelqu'un vous a amené à Swiss Bitcoin Pay, écrivez ici son code de parrainage",
       "submitDescription1": "En créant votre compte, vous acceptez nos",
       "submitDescription2": "et notre",
