--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -408,7 +408,9 @@
       "title": "Configurazione dei pagamenti",
       "iWantToReceive": "Voglio ricevere i miei fondi...",
       "in": "in",
+      "fees": "Commissioni dall'{{percent}}%.",
       "feesDetails1": "Commissioni",
+      "feesAfterwards": "Dopo il 1° anno",
       "cryptoSignature": "Firma richiesta",
       "instantTransfer": "Trasferimento istantaneo",
       "dailyTransfer": "Trasferimento giornaliero",
@@ -465,6 +467,7 @@
       "submit": "Invia",
       "hardwareConnectSuccess": "Il {{hardwareWallet}} è stato collegato con successo. È possibile scollegarlo.",
       "patchSettingNeedsEmailValidation": "Conferma le nuove impostazioni tramite l'e-mail ricevuta",
+      "firstThreeMonths": "3 primi mesi",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Indirizzo di deposito già utilizzato"
@@ -555,6 +558,7 @@
       "yourCurrency": "La tua valuta",
       "currency": "Valuta",
       "currencyDescription": "La valuta predefinita dell'azienda",
+      "referralCode": "Referral",
       "referralCodeDescription": "Se qualcuno vi ha consigliato Swiss Bitcoin Pay, scrivete qui il suo referral.",
       "submitDescription1": "Creando il vostro account, accettate la nostra",
       "submitDescription2": "e",
@@ -564,6 +568,7 @@
       "number": "numero",
       "size8to64": "Lunghezza 8-64",
       "errorDescription": "Errore durante la creazione dell'account. Si prega di riprovare più tardi o di contattarci all'indirizzo hello@swiss-bitcoin-pay.ch.",
+      "feesDiscount": "Primi 3 mesi a tasso zero!",
       "error": {
         "address": {
           "alreadyExists": "Questo indirizzo è già utilizzato da un altro account",
