--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -408,7 +408,9 @@
       "title": "Configuración de pago",
       "iWantToReceive": "Quiero recibir mis fondos...",
       "in": "en",
+      "fees": "Desde el {{percent}}% comisiones",
       "feesDetails1": "Tarifas",
+      "feesAfterwards": "Después del 1er año",
       "cryptoSignature": "Firma obligatoria",
       "instantTransfer": "Transferencia instantánea",
       "dailyTransfer": "Transferencia diaria",
@@ -465,6 +467,7 @@
       "submit": "Enviar",
       "hardwareConnectSuccess": "Tu {{hardwareWallet}} se ha conectado correctamente. Puede desconectarla.",
       "patchSettingNeedsEmailValidation": "Confirme la nueva configuración a través del correo electrónico que ha recibido",
+      "firstThreeMonths": "3 primeros meses",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Dirección de depósito ya utilizada"
@@ -555,6 +558,7 @@
       "yourCurrency": "Su moneda",
       "currency": "Moneda",
       "currencyDescription": "La moneda por defecto de su empresa",
+      "referralCode": "Código de referencia",
       "referralCodeDescription": "Si alguien le trajo a Swiss Bitcoin Pay, por favor escriba su código de referencia aquí",
       "submitDescription1": "Al crear su cuenta, está aceptando nuestra",
       "submitDescription2": "y",
@@ -564,6 +568,7 @@
       "number": "número",
       "size8to64": "longitud 8-64",
       "errorDescription": "Error al crear su cuenta. Vuelva a intentarlo más tarde o póngase en contacto con nosotros en hello@swiss-bitcoin-pay.ch",
+      "feesDiscount": "¡Primeros 3 meses al 0% de comisiones !",
       "error": {
         "address": {
           "alreadyExists": "Esta dirección ya está siendo utilizada por otra cuenta",
