--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -467,6 +467,7 @@
       "submit": "Soumettre",
       "hardwareConnectSuccess": "Votre {{hardwareWallet}} a été connecté avec succès. Vous pouvez le débrancher.",
       "patchSettingNeedsEmailValidation": "Confirmez les nouveaux paramètres via le mail que vous avez reçu",
+      "firstThreeMonths": "3 premiers mois",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Cette adresse de dépôt est déjà utilisée"
