--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -408,9 +408,9 @@
       "title": "Konfiguration der Auszahlung",
       "iWantToReceive": "Ich möchte mein Geld erhalten...",
       "in": "in",
-      "fees": "Ab {{percent}}% Gebühren",
+      "fees": "{{percent}}% Gebühren",
       "feesDetails1": "Gebühren",
-      "feesAfterwards": "Nach dem ersten Jahr",
+      "feesAfterwards": "Nach den ersten 3 Monaten",
       "cryptoSignature": "Erforderliche Signatur",
       "instantTransfer": "Sofortige Übertragung",
       "dailyTransfer": "Täglicher Transfer",
