--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -408,9 +408,9 @@
       "title": "Configurazione dei pagamenti",
       "iWantToReceive": "Voglio ricevere i miei fondi...",
       "in": "in",
-      "fees": "Commissioni dall'{{percent}}%.",
+      "fees": "{{percent}}% tasse",
       "feesDetails1": "Commissioni",
-      "feesAfterwards": "Dopo il 1° anno",
+      "feesAfterwards": "Dopo i primi 3 mesi",
       "cryptoSignature": "Firma richiesta",
       "instantTransfer": "Trasferimento istantaneo",
       "dailyTransfer": "Trasferimento giornaliero",
