--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -408,9 +408,9 @@
       "title": "Configuración de pago",
       "iWantToReceive": "Quiero recibir mis fondos...",
       "in": "en",
-      "fees": "Desde el {{percent}}% comisiones",
+      "fees": "{{percent}}% tasas",
       "feesDetails1": "Tarifas",
-      "feesAfterwards": "Después del 1er año",
+      "feesAfterwards": "Después de los 3 primeros meses",
       "cryptoSignature": "Firma obligatoria",
       "instantTransfer": "Transferencia instantánea",
       "dailyTransfer": "Transferencia diaria",
