--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -408,9 +408,9 @@
       "title": "Configurações de pagamento",
       "iWantToReceive": "Quero receber os meus fundos...",
       "in": "em",
-      "fees": "A partir de {{percent}}% de taxas",
+      "fees": "{{percent}}% taxas",
       "feesDetails1": "Taxas",
-      "feesAfterwards": "Após o 1º ano",
+      "feesAfterwards": "Após os 3 primeiros meses",
       "cryptoSignature": "Assinatura obrigatória",
       "instantTransfer": "Transferência imediata",
       "dailyTransfer": "Transferência diária",
