--- a/src/assets/translations/fi.json
+++ b/src/assets/translations/fi.json
@@ -406,9 +406,9 @@
       "title": "Tilitys määrittelyt",
       "iWantToReceive": "Haluan vastaanottaa varani...",
       "in": "ssa",
-      "fees": "Alkaen {{percent}}% kulut",
+      "fees": "{{percent}}% maksut",
       "feesDetails1": "Kulut",
-      "feesAfterwards": "Ensimmäisen vuoden jälkeen",
+      "feesAfterwards": "3 ensimmäisen kuukauden jälkeen",
       "cryptoSignature": "Allekirjoitus vaaditaan",
       "instantTransfer": "Välitön siirto",
       "dailyTransfer": "Päivittäinen siirto",
