--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -467,6 +467,7 @@
       "submit": "Invia",
       "hardwareConnectSuccess": "Il {{hardwareWallet}} è stato collegato con successo. È possibile scollegarlo.",
       "patchSettingNeedsEmailValidation": "Conferma le nuove impostazioni tramite l'e-mail ricevuta",
+      "firstThreeMonths": "3 primi mesi",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Indirizzo di deposito già utilizzato"
