--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -467,6 +467,7 @@
       "submit": "Enviar",
       "hardwareConnectSuccess": "A sua {{hardwareWallet}} foi ligada com sucesso. Pode desligá-la.",
       "patchSettingNeedsEmailValidation": "Confirmar as novas definições através da mensagem de e-mail recebida",
+      "firstThreeMonths": "3 primeiros meses",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Endereço de depósito já utilizado"
