--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -410,8 +410,8 @@
       "in": "in",
       "fees": "{{percent}}% fees",
       "feesDetails1": "Fees",
-      "firstThreeMonths": "3 first months",
-      "feesAfterwards": "After the 3 first months",
+      "firstThreeMonths": "First 3 months",
+      "feesAfterwards": "After the first 3 months",
       "cryptoSignature": "Required signature",
       "instantTransfer": "Instant transfer",
       "dailyTransfer": "Daily transfer",
