--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -410,7 +410,6 @@
       "in": "in",
       "fees": "{{percent}}% fees",
       "feesDetails1": "Fees",
-      "feesAfterwards": "After the 3 first months",
       "cryptoSignature": "Required signature",
       "instantTransfer": "Instant transfer",
       "dailyTransfer": "Daily transfer",
@@ -467,6 +466,7 @@
       "submit": "Submit",
       "hardwareConnectSuccess": "Your {{hardwareWallet}} has been connected sucessfully. You can disconnect it.",
       "patchSettingNeedsEmailValidation": "Confirm the new settings via the email you received",
+      "firstThreeMonths": "First 3 months",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Deposit address already used"
