--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -410,7 +410,6 @@
       "in": "en",
       "fees": "{{percent}}% tasas",
       "feesDetails1": "Tarifas",
-      "feesAfterwards": "Después de los 3 primeros meses",
       "cryptoSignature": "Firma obligatoria",
       "instantTransfer": "Transferencia instantánea",
       "dailyTransfer": "Transferencia diaria",
@@ -467,6 +466,7 @@
       "submit": "Enviar",
       "hardwareConnectSuccess": "Tu {{hardwareWallet}} se ha conectado correctamente. Puede desconectarla.",
       "patchSettingNeedsEmailValidation": "Confirme la nueva configuración a través del correo electrónico que ha recibido",
+      "firstThreeMonths": "3 primeros meses",
       "error": {
         "depositAddress": {
           "depositAddressAlreadyUsed": "Dirección de depósito ya utilizada"
