--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -81,7 +81,8 @@
       "instruction": "Inserire la password di BitBox02 per sbloccarlo"
     },
     "empty": {
-      "title": "Selezionare il portafoglio hardware"
+      "title": "Selezionare il portafoglio hardware",
+      "buyHardware": "Comprare un {{hardwareName}}"
     },
     "pairing": {
       "title": "Verifica del codice di accoppiamento",
