--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -81,7 +81,8 @@
       "instruction": "Introduce la contraseña de BitBox02 para desbloquearlo"
     },
     "empty": {
-      "title": "Seleccione su monedero de hardware"
+      "title": "Seleccione su monedero de hardware",
+      "buyHardware": "Compra un {{hardwareName}}"
     },
     "pairing": {
       "title": "Verificar el código de emparejamiento",
